--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
       </h3>
       <p>All terms in this section are described in the [<cite><a class="bibref" href="#bib-ActivityPub">ActivityPub</a></cite>] specification.</p>
       <ul>
-        <li><a href="https://www.w3.org/TR/activitypub#inbox" id="inbox">inbox</a> (<code>@id</code>) - This is an alias of <code><a href="https://www.w3.org/ns/ldp#inbox">ldp:inbox</a></code>.</li>
+        <li><a href="https://www.w3.org/TR/activitypub#inbox" id="inbox">inbox</a> (<code>@id</code>) - This is an alias of <code><a href="http://www.w3.org/ns/ldp#inbox">ldp:inbox</a></code>.</li>
         <li><a href="https://www.w3.org/TR/activitypub#outbox" id="outbox">outbox</a> (<code>@id</code>)</li>
         <li><a href="https://www.w3.org/TR/activitypub#following" id="following">following</a> (<code>@id</code>)</li>
         <li><a href="https://www.w3.org/TR/activitypub#followers" id="followers">followers</a> (<code>@id</code>)</li>
