--- a/index.html
+++ b/index.html
@@ -895,13 +895,13 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
         <li><a href="https://www.w3.org/TR/activitypub#following" id="following">following</a> (<code>@id</code>)</li>
         <li><a href="https://www.w3.org/TR/activitypub#followers" id="followers">followers</a> (<code>@id</code>)</li>
         <li><a href="https://www.w3.org/TR/activitypub#streams-property" id="streams">streams</a> (<code>@id</code>)</li>
-        <li><a href="https://www.w3.org/TR/activitypub#preferredusername" id="preferredUsername">preferredUsername</a> </li>
+        <li><a href="https://www.w3.org/TR/activitypub#preferredUsername" id="preferredUsername">preferredUsername</a> </li>
         <li><a href="https://www.w3.org/TR/activitypub#endpoints" id="endpoints">endpoints</a> (<code>@id</code>)</li>
-        <li><a href="https://www.w3.org/TR/activitypub#uploadmedia" id="uploadMedia">uploadMedia</a> (<code>@id</code>)</li>
-        <li><a href="https://www.w3.org/TR/activitypub#proxyurl" id="proxyUrl">proxyUrl</a> (<code>@id</code>)</li>
-        <li><a href="https://www.w3.org/TR/activitypub#oauthclientauthorize" id="oauthClientAuthorize">oauthClientAuthorize</a> </li>
-        <li><a href="https://www.w3.org/TR/activitypub#provideclientkey" id="provideClientKey">provideClientKey</a> </li>
-        <li><a href="https://www.w3.org/TR/activitypub#authorizeclientkey" id="authorizeClientKey">authorizeClientKey</a> </li>
+        <li><a href="https://www.w3.org/TR/activitypub#uploadMedia" id="uploadMedia">uploadMedia</a> (<code>@id</code>)</li>
+        <li><a href="https://www.w3.org/TR/activitypub#proxyUrl" id="proxyUrl">proxyUrl</a> (<code>@id</code>)</li>
+        <li><a href="https://www.w3.org/TR/activitypub#oauthClientAuthorize" id="oauthClientAuthorize">oauthClientAuthorize</a> </li>
+        <li><a href="https://www.w3.org/TR/activitypub#provideClientKey" id="provideClientKey">provideClientKey</a> </li>
+        <li><a href="https://www.w3.org/TR/activitypub#authorizeClientKey" id="authorizeClientKey">authorizeClientKey</a> </li>
         <li><a href="https://www.w3.org/TR/activitypub#source" id="source">source</a> </li>
       </ul>
     </section>
