--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
     }
   </script>
 </head>
-<body prefix="as: http://www.w3.org/ns/activitystreams#" about="" typeof="as:Article" property="as:content" datatype="rdf:HTML" class="h-entry" role="document" id="respecDocument">
+<body prefix="as: https://www.w3.org/ns/activitystreams#" about="" typeof="as:Article" property="as:content" datatype="rdf:HTML" class="h-entry" role="document" id="respecDocument">
   <div class="head" role="contentinfo" id="respecHeader">
     <p>
       <a class="logo" href="https://www.w3.org/"><img src="https://www.w3.org/StyleSheets/TR/2016/logos/W3C" alt="W3C" width="72" height="48"></a>
@@ -710,7 +710,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
     <p>This document makes use of the following namespaces:</p>
     <dl>
       <dt><code>as</code>:</dt>
-      <dd><code>http://www.w3.org/ns/activitystreams#</code></dd>
+      <dd><code>https://www.w3.org/ns/activitystreams#</code></dd>
       <dt><code>xsd</code>:</dt>
       <dd><code>http://www.w3.org/2001/XMLSchema#</code></dd>
       <dt><code>ldp</code>:</dt>
